# secrets-detection

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .secrets.baseline  Dockerfile  README.md  demo-secret.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: secrets-scan.yml  security-ci.yml
secrets_detection/: __init__.py
src/secure_api/: __init__.py  config.py  main.py
tests/: test_main.py
