[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secrets-detection"
version = "0.1.0"
description = "DevSecOps secrets scanning (detect-secrets + GitHub Actions)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "detect-secrets>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["secrets_detection"]
