[project]
name = "secure-api-demo"
version = "0.1.0"
description = "Minimal Python API demonstrating secure configuration (no secrets in repo)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.0",
  "uvicorn[standard]>=0.44.0",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "bandit[toml]>=1.8.0",
  "pip-audit>=2.7.0",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # assert_used — allowed in tests only; bandit scans src/

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
